--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -4,13 +4,17 @@
   /* padding: 0 10vmin; */
 }
 
-.full-page {
-  min-height: 100vh;
+.content {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-  padding: 10vmin 0;
+  margin: 0 0 0 60px;
+}
+@media screen and (min-width: 600px) {
+  .content {
+    margin: 0 0 0 80px;
+  }
 }
