--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -18,3 +18,58 @@
     margin: 0 0 0 80px;
   }
 }
+
+.btn-hover {
+  border: none;
+  background-size: 300% 100%;
+  moz-transition: all 0.4s ease-in-out;
+  -o-transition: all 0.4s ease-in-out;
+  -webkit-transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease-in-out;
+}
+
+.btn-hover:hover {
+  background-position: 100% 0;
+  moz-transition: all 0.4s ease-in-out;
+  -o-transition: all 0.4s ease-in-out;
+  -webkit-transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease-in-out;
+}
+
+.button {
+  cursor: pointer;
+  text-align: center;
+  text-transform: uppercase;
+  font-family: "Oxygen-Bold";
+  font-size: calc(10px + 0.5vmin);
+  padding: 10px 0;
+  box-shadow: 3px 3px 0 #23C7D9;
+  margin: 10px 15px 0;
+}
+.button a {
+  color: white;
+}
+
+.button a:hover {
+  color: white;
+  text-decoration: none;
+}
+
+/* .overlay {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  z-index: 2;
+  opacity: 0;
+  background: rgba(39, 42, 43, 0.8);
+  transition: opacity 200ms ease-in-out;
+  border-radius: 4px;
+  margin: -15px 0 0 -15px;
+}
+.overlay button {
+  margin: 5px;
+}
+.overlay:hover {
+  opacity: 1;
+} */
