--- a/src/assets/css/navbar.css
+++ b/src/assets/css/navbar.css
@@ -140,7 +140,7 @@
   }
 }
 
-body {
+/* body {
   height: 100vh;
   background: radial-gradient(
       circle at 94.02% 88.03%,
@@ -149,7 +149,7 @@ body {
     ),
     radial-gradient(circle at 25.99% 27.79%, #ff94fb, transparent 100%),
     radial-gradient(circle at 50% 50%, #000000, #000000 100%);
-}
+} */
 
 h1 {
   margin-top: 6rem;
