--- a/src/assets/css/store.css
+++ b/src/assets/css/store.css
@@ -1,9 +1,93 @@
-.item {
+.card-product {
   padding-top: 10px;
+  padding: 7px;
 }
 
 .hvr-float {
   transition-property: transform, opacity !important;
   transition-duration: 400ms !important;
   transition-timing-function: ease-out !important;
+}
+
+.button {
+  /* background-image: linear-gradient(
+    to right,
+    rgb(140, 208, 227) 80%,
+    rgb(240, 140, 205) 100%
+  ); */
+  background-image: linear-gradient(
+    -52.9deg,
+    #45108a 2.02%,
+    #3d065f 29.29%,
+    #10054d 100%
+  );
+}
+
+.card-rating {
+  text-align: center;
+}
+
+.card-title {
+  font-family: Oxygen-Bold;
+  font-size: calc(10px + 1vmin);
+  color: black;
+  /* word-wrap: break-word; */
+  word-break: break-all;
+  padding: 0 10px;
+  text-align: center;
+}
+
+.card-container {
+  position: relative;
+}
+
+.card-container .overlay {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  overflow: hidden;
+  top: 0;
+  left: 0;
+  /* background-color: rgba(75, 75, 75, 0.7); */
+  /* -webkit-transition: all 0.4s cubic-bezier(0.88, -0.99, 0, 1.81); */
+  /* transition: all 0.4s cubic-bezier(0.88, -0.99, 0, 1.81); */
+  opacity: 0;
+}
+
+.card-container .overlay a {
+  position: absolute;
+  text-align: center;
+  width: 101%;
+  top: 50%;
+  left: 50%;
+  margin: 0;
+  /* transition: opacity 0.35s, transform 0.35s; */
+  transform: translate3d(-50%, -50%, 0);
+  -webkit-transform-origin: 50%;
+  transform-origin: 50%;
+  font-size: calc(5px + 1vmin);
+  text-transform: uppercase;
+  padding: 5px;
+  color: black;
+  background-color: rgba(255, 255, 255, 0.7);
+  cursor: pointer;
+}
+
+.card-container .overlay a:hover {
+  background-color: rgba(255, 255, 255, 1);
+  text-decoration: none;
+}
+
+.card-container:hover .card-image {
+  display: inline-block;
+  vertical-align: middle;
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  transform: translate(0, -3%);
+  transition-property: transform, opacity !important;
+  transition-duration: 400ms !important;
+  transition-timing-function: ease-out !important;
+}
+
+.card-container:hover .overlay {
+  opacity: 1;
 }
