--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -1,3 +1,14 @@
+.background {
+  /* max-width: 100%; */
+  background: linear-gradient(
+    to bottom,
+    rgba(247, 235, 97, 0.47) 0,
+    rgba(240, 140, 205, 0.47) 50%,
+    rgba(115, 210, 230, 0.47) 100%
+  );
+  min-height: 100vh;
+}
+
 .center-images {
   display: block;
   margin: 0 auto;
@@ -5,18 +16,24 @@
 }
 
 .content {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
   margin: 0 0 0 60px;
 }
 @media screen and (min-width: 600px) {
   .content {
     margin: 0 0 0 80px;
   }
+}
+
+.content-inner {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: black;
+  background-color: white;
+  margin: 0 10vmin;
+  padding: 4vmin 0;
 }
 
 .btn-hover {
@@ -43,7 +60,7 @@
   font-family: "Oxygen-Bold";
   font-size: calc(10px + 0.5vmin);
   padding: 10px 0;
-  box-shadow: 3px 3px 0 #23C7D9;
+  box-shadow: 3px 3px 0 #23c7d9;
   margin: 10px 15px 0;
 }
 .button a {
@@ -73,3 +90,30 @@
 .overlay:hover {
   opacity: 1;
 } */
+
+.shopping-cart {
+  position: fixed;
+  bottom: 2vmin;
+  right: 10vmin;
+  cursor: pointer;
+}
+
+.shopping-cart > img {
+  width: 8vmin;
+  background-color: white;
+  border-radius: 10px;
+  padding: 1.5vmin;
+  /* border-radius: 100px; */
+}
+
+.badge-cart {
+  position: absolute;
+  background-color: red;
+  border-radius: 10px;
+  padding: 0.5vmin 1vmin;
+  font-size: calc(8px + 0.5vmin);
+  color: white;
+  /* height: 2vmin; */
+  top: -10px;
+  left: 6.5vmin
+}
