--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -101,7 +101,7 @@
 
 .shopping-cart > img {
   width: 8vmin;
-  background-color: white;
+  background-color: wheat;
   border-radius: 10px;
   padding: 1.5vmin;
   /* border-radius: 100px; */
