--- a/src/assets/css/store.css
+++ b/src/assets/css/store.css
@@ -156,3 +156,106 @@
   justify-content: center;
   padding: 0 10vmin;
 }
+
+.content-product > .card-product {
+  width: 25%;
+}
+
+@media screen and (max-width: 1200px) {
+  .content-product > .card-product {
+    width: 33%;
+  }
+}
+
+@media screen and (max-width: 992px) {
+  .content-product > .card-product {
+    width: 33%;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .content-product > .card-product {
+    width: 50%;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .content-product > .card-product {
+    width: 100%;
+  }
+}
+
+.content-search {
+  /* background: black; */
+  width: 100%;
+  /* height: 60px; */
+  padding: 0 12vmin;
+}
+
+.content-search > form {
+  margin-bottom: 4vmin;
+  position: relative;
+  /* top: 50%; */
+  left: 50%;
+  transform: translate(-50%, 0%);
+  transition: all 1s;
+  width: 100%;
+  height: 50px;
+  background: white;
+  box-sizing: border-box;
+  border-radius: 25px;
+  border: 4px solid white;
+  padding: 5px;
+}
+
+.content-search > form::after {
+  position: absolute;
+  top: -4px;
+  bottom: -4px;
+  left: -4px;
+  right: -4px;
+  background: linear-gradient(-90deg, #ffa98c 3.54%, #ad00bd 98.48%);
+  content: "";
+  z-index: -1;
+  border-radius: 25px;
+}
+
+.content-search > form > input {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 42.5px;
+  line-height: 30px;
+  outline: 0;
+  border: 0;
+  display: block;
+  font-size: 1em;
+  border-radius: 20px;
+  padding: 0 43px 0 20px;
+}
+
+.content-search > form > input::-webkit-search-cancel-button {
+  -webkit-appearance: none;
+}
+
+.content-search > form > .search {
+  box-sizing: border-box;
+  padding: 10px;
+  width: 42.5px;
+  height: 42.5px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  border-radius: 50%;
+  color: #07051a;
+  text-align: center;
+  font-size: 1.2em;
+  transition: all 1s;
+  cursor: pointer;
+}
+
+.content-search > form:hover > .search {
+  background: linear-gradient(-90deg, #ffa98c 3.54%, #ad00bd 98.48%);
+  color: white;
+}
