--- a/src/assets/css/detail.css
+++ b/src/assets/css/detail.css
@@ -1,159 +1,20 @@
-.container {
-  margin-top: 86px !important;
+.detail-content {
+  flex-direction: row;
 }
 
-.second-nav {
-  padding: 0.5rem 1rem;
+.detail-content .image-gallery {
+  flex: 1;
+  /* width: 50vmin; */
+  padding: 0 3vmin;
 }
 
-.breadcrumb-list {
-  display: flex;
-  flex-wrap: wrap;
-  padding: 0;
-  margin: 1rem 0 0 0;
-  list-style: none;
-}
-.breadcrumb-list li {
-  font-size: 0.85rem;
-  letter-spacing: 0.125rem;
-  text-transform: uppercase;
+.detail-content .detail-text {
+  flex: 1;
+  padding: 0 3vmin;
 }
 
-.breadcrumb-item.active {
-  color: #333;
-}
-.breadcrumb-item + .breadcrumb-item::before {
-  content: "/";
-  display: inline-block;
-  padding: 0 0.5rem;
-  color: #d5d5d5;
-}
-
-.breadcrumb-item a {
-  color: #888;
-  text-decoration: none;
-  transition: all 0.2s ease;
-}
-
-.breadcrumb-item a:hover {
-  color: #333;
-}
-
-.grid > [class*="column"] {
-  padding: 1rem;
-}
-
-.grid.product {
-  border-bottom: 0.0625rem solid #e3dddd;
-}
-
-.product-image img {
-  width: 100%;
-  height: 52vh;
-}
-
-.product-image img.active {
-  display: block;
-  margin: 0 0 0.75rem 0;
-}
-
-.gallery-wrapper {
-  position: relative;
-  overflow: hidden;
-}
-
-.gallery {
-  padding: 0;
-  position: relative;
-  font-size: 0;
-  white-space: nowrap;
-}
-
-.item-wrapper {
-	cursor: pointer;
-	width: 23%; /* arbitrary value */
-	display: inline-block;
-  background-color: white;
-}
-
-.item-wrapper img {
-  width: 100%;
-  height: 10rem;
-}
-
-.gallery-item { opacity: 0.5; }
-
-.gallery-item.active { opacity: 1; }
-
-/* .transition {
-	transition: all 350ms ease-in-out;
-} */
-
-.image-list li:last-child {
-  margin: 0;
-}
-
-.image-list img {
-  height: 10rem;
-  width: 100%;
-  transition: opacity 0.3s ease;
-  cursor: pointer;
-}
-
-.image-list img:hover {
-  opacity: 0.7;
-}
-
-.detail {
-  text-align: left;
-}
-
-.detail h1,
-h2 {
-  margin: 1.75rem 0 1rem 0;
-}
-
-.description {
-  border-top: 0.0625rem solid #e3dddd;
-  margin: 2rem 0;
-  padding: 1rem 0 0 0;
-}
-
-.download {
-  position: relative;
-  display: inline-block;
-  background: #3e3e3f;
-  color: #fff;
-  border: none;
-  border-radius: 0;
-  padding: 1.25rem 2.5rem;
-  font-size: 1rem;
-  text-transform: uppercase;
-  cursor: pointer;
-  -webkit-transform: translateZ(0);
-  transform: translateZ(0);
-  transition: color 0.3s ease;
-  letter-spacing: 0.0625rem;
-}
-
-.controls {
-  /* font-size: 0; */
-  border-top: none;
-}
-.move-btn {
-  display: inline-block;
-  width: 50%;
-  border: none;
-  color: #ccc;
-  background-color: transparent;
-  padding: 0.2em 1.5em;
-}
-.move-btn:first-child {
-  border-right: none;
-}
-.move-btn.left {
-  cursor: w-resize;
-}
-.move-btn.right {
-  cursor: e-resize;
+.detail-text .title {
+  color: black;
+  font-family: Oxygen-Bold;
+  word-break: break-all;
 }
